cmake_minimum_required(VERSION 3.12)

include(pico_sdk_import.cmake)

project(morningtown C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

# Initialize the SDK
pico_sdk_init()

add_executable(morningtown morningtown.c)
target_link_libraries(morningtown pico_stdlib hardware_rtc)
pico_add_extra_outputs(morningtown)
